--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body{
 }
 h1{
 text-align: center;
+font-size: 30px;
+font-family: 'Times New Roman', Times, serif;
+font-weight: 500px;
+letter-spacing: 5px;
 }
 
 .navbar{
@@ -43,15 +47,21 @@ color: wheat;
     border: 1px solid black;
    margin: auto;
    margin-top: 30px;
-   box-shadow: 1px 3px black;
+   box-shadow: 1px 1px 1px 1px rgb(28, 27, 27,0.7);
    background-image: url(https://cdn.pixabay.com/photo/2016/05/05/02/37/sunset-1373171__480.jpg);
    background-repeat: no-repeat;
    background-position:center;
+   background-size: auto;
 }
-form{
+.form{
     padding: 8px;
     text-align: center;
     color:blue;
+    transition: all ease-out 0.3s;
+    border-radius: 5%;
+}
+.form:hover{
+    translate:-10px -10px;
 }
 .email
 {
@@ -60,15 +70,85 @@ form{
 .pass{
     padding-right:22px;
 }
-.button{
-    margin-top: 8px;
+.button input{
+    box-sizing: border-box;
+    text-align: center;
+margin: 3px;
+    
 }
-.bt1:hover{
-border
+.bt1 input{
+    border-radius: 5px;
+    border: none;
 }
-.bt2{
-  margin-top: 3px;
+.bt2 input{
+    border-radius: 5px;
+    border: none;
 }
-.reg{
+.reg p button{
+    border-radius: 5px;
+    border: none;
+}
+.bt1 input:hover{
+  
+   background-color: blue;
+   color: white;
+}
+.bt2 input:hover{
+   
+    background-color: blue;
+    color: white;
+}
+.reg p{
+    margin-top: 25px;
+}
+.reg a{
     text-decoration: none;
+}
+.reg  p button:hover{
+  
+    background-color: blue;
+   
+    
+}
+.reg  p button a:hover{
+    color: white;
+}
+.container{
+    height:100%;
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: 250px auto 250px;
+    gap: 3px;
+
+}
+.main{
+    background-color: brown;
+    grid-column: 1/3;
+    color: aqua;
+}
+.main h4{
+    text-align: center;
+   
+}
+.main p{
+    text-align: justify;
+    margin: 20px;
+}
+.side{
+    background-color: black;
+    color: aqua;
+    grid-column: 3/3;
+}
+.side h4{
+    text-align: center;
+}
+.side p{
+    text-align: center;
+    margin-top: 20px;
+}
+.footer{
+    
+    background-color: blanchedalmond;
+    grid-column: 1/-1;
 }
